Added circle, rectangle, vector2 and collision manager

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </script>
 
   <!-- include source files here... -->
-  <script src="src/CollisionComponent.js"></script>
+  <script src="src/Vector2.js"></script>
+  <script src="src/MathHelper.js"></script>
+  <script src="src/CollisionManager.js"></script>
 
   <!-- include spec files here... -->
   <script src="test/CollisionComponent.js"></script>
