--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
   <!-- include source files here... -->
   <script src="src/Vector2.js"></script>
   <script src="src/MathHelper.js"></script>
+  <script src="src/Shape/Shape.js"></script>
+  <script src="src/Shape/Circle.js"></script>
+  <script src="src/Shape/Rectangle.js"></script>
   <script src="src/CollisionManager.js"></script>
 
-  <!-- include spec files here... -->
+  <!-- include test files here... -->
   <script src="test/CollisionComponent.js"></script>
 
   <script>mocha.run()</script>
