--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
   <!-- include source files here... -->
   <script src="src/Vector2.js"></script>
   <script src="src/MathHelper.js"></script>
+
   <script src="src/Shape/Shape.js"></script>
   <script src="src/Shape/Circle.js"></script>
   <script src="src/Shape/Rectangle.js"></script>
+  <script src="src/Shape/Polygon.js"></script>
+
+  <script src="src/Collider/Collider.js"></script>
+  <script src="src/Collider/CircleCollider.js"></script>
+  <script src="src/Collider/BoxCollider.js"></script>
+  <script src="src/Collider/PolygonCollider.js"></script>
+
   <script src="src/CollisionManager.js"></script>
 
   <!-- include test files here... -->
