Added Transformations and the demo for it, and fixed error in tags

--- a/demo/Transformations/Transformations.html
+++ b/demo/Transformations/Transformations.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Tags&Reaction</title>
+        <title>Transformations</title>
     </head>
 
     <body onload=main()>
