Added folder for spatial hashing demo, and modified existing files to fit into coding standard

--- a/demo/SpatialHashing/SpatialHashing.html
+++ b/demo/SpatialHashing/SpatialHashing.html
@@ -3,18 +3,20 @@
 <html>
 
 <head>
-  <title>Circle-Rect Demo</title>
+  <title>SpatialHashing</title>
 </head>
 
 <body onload=main()>
 
   <script src="../../src/Vector2.js"></script>
+  <script src="../../src/MathHelper.js"></script>
+
   <script src="../../src/Shape/Shape.js"></script>
-  <script src="../../src/Shape/Rectangle.js"></script>
-  <script src="../../src/Shape/Circle.js"></script>
+  <script src="../../src/Shape/Polygon.js"></script>
+
   <script src="../../src/Collider/Collider.js"></script>
-  <script src="../../src/Collider/BoxCollider.js"></script>
-  <script src="../../src/Collider/CircleCollider.js"></script>
+  <script src="../../src/Collider/PolygonCollider.js"></script>
+
   <script src="../../src/CollisionManager.js"></script>
 
   <!--            Game            -->
