--- a/demo/SpatialHashing/SpatialHashing.html
+++ b/demo/SpatialHashing/SpatialHashing.html
@@ -12,10 +12,10 @@
   <script src="../../src/MathHelper.js"></script>
 
   <script src="../../src/Shape/Shape.js"></script>
-  <script src="../../src/Shape/Polygon.js"></script>
+  <script src="../../src/Shape/Circle.js"></script>
 
   <script src="../../src/Collider/Collider.js"></script>
-  <script src="../../src/Collider/PolygonCollider.js"></script>
+  <script src="../../src/Collider/CircleCollider.js"></script>
 
   <script src="../../src/CollisionManager.js"></script>
 
